fixed spacing issues with side bar and footer (margin) and finally got the sidebar to be 100% width

--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,16 @@ body {
    display: flex;
    flex-direction: column;
    align-items: center;
+   margin: 0;
+   padding: 0%;
 }
 
 .header-container {
     background-color: #120323;
     color: yellowgreen;
-
     display: flex;
-    flex-direction: column;
     align-items: center;
-   width: 100%;
+    width: 100%;
 }
 
 .header-container img {
@@ -24,7 +24,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 90%;
+    width: 100%;
     max-width: 1000px;
 }
 
@@ -38,6 +38,7 @@ main {
 figure {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 figure img {
@@ -49,17 +50,17 @@ figure img {
 aside {
     background-color: yellowgreen;
     width: 100%;
-     
-
-  
+    padding: 20px;
+    margin-bottom: 20px;
 }
 
 footer {
     background-color: red;
     padding: 10px;
     width: 100%;
-    color: azure;
+    color: white;
     text-align: center;
+    margin-bottom: 20px;
 
 }
 
@@ -127,7 +128,6 @@ aside {
         justify-content: center;
 
     }
-
     aside {
         flex: 1;
         max-width: 300px;
